--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "bs58check": "^2.1.2",
-    "create-hmac": "^1.1.7",
+    "crypto-browserify": "^3.12.0",
     "safe-buffer": "^5.1.1",
     "secp256k1": "^4.0.0"
   },
